--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "conductor": "https://github.com/source-academy/conductor.git#0.2.1",
     "rollup": "^4.34.1",
     "tslib": "^2.8.1",
+    "tsx": "^4.19.3",
     "typescript": "^5.5.3"
   }
 }
